--- a/login.html
+++ b/login.html
@@ -64,12 +64,12 @@
 				<span class="login-title">Login</span>
 				<form action="#">
 					<div class="login-form-row">
+						<input id="id-email" type="email" required>
 						<label for="id-email">Email:</label>
-						<input id="id-email" type="email">
 					</div>
 					<div class="login-form-row">
+						<input id="id-password" type="password" required>
 						<label for="id-password">Password:</label>
-						<input id="id-password" type="password">
 					</div>
 					<div class="login-form-buttons d-flex justify-content-between align-items-center">
 						<a href="#">Forgot your password?</a>
@@ -104,7 +104,7 @@
 							<a href="#">faq</a>
 						</nav>
 						<nav class="footer-other-nav">
-							<a href="#">Contact</a>
+							<a href="contact.html">Contact</a>
 							<a href="#">Glossary of terms</a>
 							<a href="terms.html">Terms & conditions</a>
 							<a href="privacy-policy.html">privacy policy</a>
