--- a/offer.html
+++ b/offer.html
@@ -310,73 +310,85 @@
 							</div>
 							<div class="row management-row">
 								<div class="col-sm-6">
-									<div class="management-photo">
-										<img src="images/avatar-man.png" class="img-fluid" alt="">
-									</div>
-									<div class="management-info">
-										<span class="name">ANDREW BOWYER</span>
-										<span class="position">Co-founder, Director</span>
-										<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
-										<a href="#" class="read-more">Read more...</a>
-									</div>
-								</div>
-								<div class="col-sm-6">
-									<div class="management-photo">
-										<img src="images/avatar-man.png" class="img-fluid" alt="">
-									</div>
-									<div class="management-info">
-										<span class="name">MILES ASHCROF</span>
-										<span class="position">Co-founder, Director</span>
-										<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
-										<a href="#" class="read-more">Read more...</a>
-									</div>
-								</div>
-							</div>
-							<div class="row management-row">
-								<div class="col-sm-6">
-									<div class="management-photo">
-										<img src="images/avatar-man.png" class="img-fluid" alt="">
-									</div>
-									<div class="management-info">
-										<span class="name">AIR CDRE PETER ROUND</span>
-										<span class="position">Non-Exec Director</span>
-										<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
-										<a href="#" class="read-more">Read more...</a>
+									<div class="management-info-wrapper">
+										<div class="management-photo">
+											<img src="images/avatar-man.png" class="img-fluid" alt="">
+										</div>
+										<div class="management-info">
+											<span class="name">ANDREW BOWYER</span>
+											<span class="position">Co-founder, Director</span>
+											<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
+											<a href="#" class="read-more" data-toggle="modal" data-target="#detail-info">Read more...</a>
+										</div>
 									</div>
 								</div>
 								<div class="col-sm-6">
-									<div class="management-photo">
-										<img src="images/avatar-woman.png" class="img-fluid" alt="">
-									</div>
-									<div class="management-info">
-										<span class="name">LARA BUSTO</span>
-										<span class="position">Principle Engineer</span>
-										<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
-										<a href="#" class="read-more">Read more...</a>
+									<div class="management-info-wrapper">
+										<div class="management-photo">
+											<img src="images/avatar-man.png" class="img-fluid" alt="">
+										</div>
+										<div class="management-info">
+											<span class="name">MILES ASHCROF</span>
+											<span class="position">Co-founder, Director</span>
+											<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
+											<a href="#" class="read-more">Read more...</a>
+										</div>
 									</div>
 								</div>
 							</div>
 							<div class="row management-row">
 								<div class="col-sm-6">
-									<div class="management-photo">
-										<img src="images/avatar-man.png" class="img-fluid" alt="">
-									</div>
-									<div class="management-info">
-										<span class="name">ANDREW CHENEY</span>
-										<span class="position">Project Manager</span>
-										<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
-										<a href="#" class="read-more">Read more...</a>
+									<div class="management-info-wrapper">
+										<div class="management-photo">
+											<img src="images/avatar-man.png" class="img-fluid" alt="">
+										</div>
+										<div class="management-info">
+											<span class="name">AIR CDRE PETER ROUND</span>
+											<span class="position">Non-Exec Director</span>
+											<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
+											<a href="#" class="read-more">Read more...</a>
+										</div>
 									</div>
 								</div>
 								<div class="col-sm-6">
-									<div class="management-photo">
-										<img src="images/avatar-man.png" class="img-fluid" alt="">
+									<div class="management-info-wrapper">
+										<div class="management-photo">
+											<img src="images/avatar-woman.png" class="img-fluid" alt="">
+										</div>
+										<div class="management-info">
+											<span class="name">LARA BUSTO</span>
+											<span class="position">Principle Engineer</span>
+											<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
+											<a href="#" class="read-more">Read more...</a>
+										</div>
 									</div>
-									<div class="management-info">
-										<span class="name">DANIEL MARTIN</span>
-										<span class="position">Principle Electronics Engineer</span>
-										<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
-										<a href="#" class="read-more">Read more...</a>
+								</div>
+							</div>
+							<div class="row management-row">
+								<div class="col-sm-6">
+									<div class="management-info-wrapper">
+										<div class="management-photo">
+											<img src="images/avatar-man.png" class="img-fluid" alt="">
+										</div>
+										<div class="management-info">
+											<span class="name">ANDREW CHENEY</span>
+											<span class="position">Project Manager</span>
+											<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
+											<a href="#" class="read-more">Read more...</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<div class="management-info-wrapper">
+										<div class="management-photo">
+											<img src="images/avatar-man.png" class="img-fluid" alt="">
+										</div>
+										<div class="management-info">
+											<span class="name">DANIEL MARTIN</span>
+											<span class="position">Principle Electronics Engineer</span>
+											<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ...</p>
+											<a href="#" class="read-more">Read more...</a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -514,7 +526,7 @@
 							<a href="#">faq</a>
 						</nav>
 						<nav class="footer-other-nav">
-							<a href="#">Contact</a>
+							<a href="contact.html">Contact</a>
 							<a href="#">Glossary of terms</a>
 							<a href="terms.html">Terms & conditions</a>
 							<a href="privacy-policy.html">privacy policy</a>
@@ -550,7 +562,7 @@
 			<div class="modal-dialog modal-dialog-centered video-modal-wrapper" role="document">
 				<div class="modal-content">
 					<a href="#" class="close-video-modal" data-dismiss="modal" aria-label="Close">
-						<i class="material-icons">close</i>
+						<i class="mdi mdi-close"></i>
 					</a>
 					<div class="videoWrapper">
 						<iframe width="560" height="349" src="http://www.youtube.com/embed/n_dZNLr2cME?rel=0&amp;hd=1" frameborder="0" allowfullscreen=""></iframe>
@@ -595,7 +607,7 @@
 		<div class="modal fade" id="invest-modal" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered invest-modal-dialog" role="document">
 				<div class="modal-content">
-					<a href="#" class="modal-close" data-dismiss="modal" aria-label="Close"><i class="material-icons">close</i></a>
+					<a href="#" class="modal-close" data-dismiss="modal" aria-label="Close"><i class="mdi mdi-close"></i></a>
 					<span>Invest NOW</span>
 					<em class="red-color">By submitting your bid you acknowledge your firm commitment to the Offer for the amount specified below.</em>
 					<form action="#">
@@ -631,6 +643,26 @@
 							situation or needs. Any prospectus or product disclosure statement that is obtained from this website should be
 							considered before applying for financial products. We recommend that you seek independent professional advice</p>
 					</form>
+				</div>
+			</div>
+		</div>
+
+		<!-- Modal detail info -->
+		<div class="modal fade" id="detail-info" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered invest-modal-dialog" role="document">
+				<div class="modal-content">
+					<a href="#" class="modal-close" data-dismiss="modal" aria-label="Close"><i class="mdi mdi-close"></i></a>
+					<div class="management-info-wrapper">
+						<div class="management-photo">
+							<img src="images/avatar-man.png" class="img-fluid" alt="">
+						</div>
+						<div class="management-info" style="margin: 0;">
+							<span class="name">ANDREW BOWYER</span>
+							<span class="position">Co-founder, Director</span>
+							<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+							<a href="#" class="read-more" data-dismiss="modal" aria-label="Close">Back</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
