--- a/signup.html
+++ b/signup.html
@@ -70,42 +70,42 @@
 						<div class="row">
 							<div class="col-md-6">
 								<div class="login-form-row">
-									<label for="first-name">*First Name</label>
 									<input id="first-name" class="border-main-color" type="text">
+									<label for="first-name">*First Name</label>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="login-form-row">
-									<label for="last-name">*Last Name</label>
 									<input id="last-name" class="border-error" type="text">
+									<label for="last-name">*Last Name</label>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								<div class="login-form-row">
-									<label for="email">*Email</label>
 									<input id="email" type="email">
+									<label for="email">*Email</label>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="login-form-row">
-									<label for="referer-code">Referer code</label>
 									<input id="referer-code" type="number">
+									<label for="referer-code">Referer code</label>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								<div class="login-form-row">
-									<label for="pass">*Password</label>
 									<input id="pass" type="password">
+									<label for="pass">*Password</label>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="login-form-row">
-									<label for="pass-repeat">*Repeat password</label>
 									<input id="pass-repeat" type="password">
+									<label for="pass-repeat">*Repeat password</label>
 								</div>
 							</div>
 						</div>
@@ -158,7 +158,7 @@
 							<a href="#">faq</a>
 						</nav>
 						<nav class="footer-other-nav">
-							<a href="#">Contact</a>
+							<a href="contact.html">Contact</a>
 							<a href="#">Glossary of terms</a>
 							<a href="terms.html">Terms & conditions</a>
 							<a href="privacy-policy.html">privacy policy</a>
