--- a/terms.html
+++ b/terms.html
@@ -196,7 +196,7 @@
 							<a href="#">faq</a>
 						</nav>
 						<nav class="footer-other-nav">
-							<a href="#">Contact</a>
+							<a href="contact.html">Contact</a>
 							<a href="#">Glossary of terms</a>
 							<a href="terms.html" class="active">Terms & conditions</a>
 							<a href="privacy-policy.html">privacy policy</a>
