Fixed inputs label, added loading on home page, changed styles on dashboard according to feedback

--- a/dashboard-change-pass.html
+++ b/dashboard-change-pass.html
@@ -121,7 +121,7 @@
 					<div class="dashboard-header-right d-flex align-items-center">
 						<a href="#" class="user-info d-flex align-items-center">
 							<i class="mdi mdi-account-circle"></i>
-							<span>Hi, Bogdan</span>
+							<span>Hi Bogdan</span>
 						</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
