--- a/dashboard-notifications.html
+++ b/dashboard-notifications.html
@@ -121,7 +121,7 @@
 					<div class="dashboard-header-right d-flex align-items-center">
 						<a href="#" class="user-info d-flex align-items-center">
 							<i class="mdi mdi-account-circle"></i>
-							<span>Hi, Bogdan</span>
+							<span>Hi Bogdan</span>
 						</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
@@ -177,36 +177,38 @@
 							<thead>
 							<tr>
 								<th style="width: 35%;">TITLE</th>
-								<th style="width: 40%;">message</th>
+								<th style="width: 42%;">message</th>
 								<th style="width: 15%">Received</th>
-								<th style="width: 5%;">
+								<th class="text-center text-nowrap">
 									<div class="checkbox">
 										<input id="check3" type="checkbox">
 										<label for="check3" class="d-flex">
 											<span><i class="mdi mdi-check"></i></span>
 										</label>
 									</div>
+									<a href="#" class="control-buttons delete">
+										<i class="mdi mdi-delete"></i>
+									</a>
 								</th>
-								<th class="text-center"><i class="mdi mdi-delete"></i></th>
 							</tr>
 							</thead>
 							<tbody>
 							<tr>
-								<td><strong>TOKEN Application Processing and Management Fee Invoice</strong></td>
+								<td>TOKEN Application Processing and Management Fee Invoice</td>
 								<td>Processing and Management Fee Invoice Fee invoice for Your
 									application to offer TOKEN.Please pay pr...</td>
 								<td>27 April 2018</td>
-								<td>
+								<th class="text-center text-nowrap">
 									<div class="checkbox">
 										<input id="check4" type="checkbox">
 										<label for="check4" class="d-flex">
 											<span><i class="mdi mdi-check"></i></span>
 										</label>
 									</div>
-								</td>
-								<td class="text-center">
-									<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
-								</td>
+									<a href="#" class="control-buttons delete">
+										<i class="mdi mdi-delete"></i>
+									</a>
+								</th>
 							</tr>
 							</tbody>
 						</table>
