--- a/dashboard-overview.html
+++ b/dashboard-overview.html
@@ -121,7 +121,7 @@
 					<div class="dashboard-header-right d-flex align-items-center">
 						<a href="#" class="user-info d-flex align-items-center">
 							<i class="mdi mdi-account-circle"></i>
-							<span>Hi, Bogdan</span>
+							<span>Hi Bogdan</span>
 						</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
@@ -155,7 +155,7 @@
 										<th style="width: 13%">PRICE PER UNIT</th>
 										<th style="width: 14%">YOUR BID</th>
 										<th style="width: 15%">STATUS</th>
-										<th style="width: 14%">PDF</th>
+										<th style="width: 14%"></th>
 										<th></th>
 									</tr>
 								</thead>
@@ -167,7 +167,7 @@
 										<td>Not Available</td>
 										<td><span>AU$</span> 1,024.00</td>
 										<td>Pay Submission Fee</td>
-										<td><a href="#" class="pay-apply-button">Pay now</a></td>
+										<td><a href="#" class="pay-apply-button">payment details</a></td>
 										<td class="text-center text-nowrap">
 											<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
 											<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
@@ -221,7 +221,7 @@
 									<th style="width: 13%">PRICE PER UNIT</th>
 									<th style="width: 14%">YOUR BID</th>
 									<th style="width: 15%">STATUS</th>
-									<th style="width: 14%">PDF</th>
+									<th style="width: 14%"></th>
 									<th></th>
 								</tr>
 								</thead>
@@ -281,17 +281,19 @@
 								<thead>
 								<tr>
 									<th style="width: 23%;">TITLE</th>
-									<th style="width: 53%;">message</th>
+									<th style="width: 58%;">message</th>
 									<th style="width: 10%">Received</th>
-									<th style="width: 5%;">
+									<th class="text-center text-nowrap">
 										<div class="checkbox">
 											<input id="check1" type="checkbox">
 											<label for="check1" class="d-flex">
 												<span><i class="mdi mdi-check"></i></span>
 											</label>
 										</div>
+										<a href="#" class="control-buttons delete">
+											<i class="mdi mdi-delete"></i>
+										</a>
 									</th>
-									<th class="text-center"><i class="mdi mdi-delete"></i></th>
 								</tr>
 								</thead>
 								<tbody>
@@ -300,55 +302,55 @@
 										Management Fee Invoice</td>
 									<td>Processing and Management Fee Invoice Fee invoice for Your application to offer 708 test. Please pay...</td>
 									<td>19 April 2018</td>
-									<td>
+									<td class="text-center text-nowrap">
 										<div class="checkbox">
 											<input id="check2" type="checkbox">
 											<label for="check2" class="d-flex">
 												<span><i class="mdi mdi-check"></i></span>
 											</label>
 										</div>
-									</td>
-									<td class="text-center">
-										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
+										<a href="#" class="control-buttons delete">
+											<i class="mdi mdi-delete"></i>
+										</a>
 									</td>
 								</tr>
 								<tr>
 									<td>708 test Application Received</td>
 									<td>Hi Bogdan, Thank you for your application in 708 test. Your application will be reviewed and when ap...</td>
 									<td>19 April 2018</td>
-									<td>
+									<td class="text-center text-nowrap">
 										<div class="checkbox">
 											<input id="check3" type="checkbox">
 											<label for="check3" class="d-flex">
 												<span><i class="mdi mdi-check"></i></span>
 											</label>
 										</div>
-									</td>
-									<td class="text-center">
-										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
+										<a href="#" class="control-buttons delete">
+											<i class="mdi mdi-delete"></i>
+										</a>
 									</td>
 								</tr>
 								<tr>
 									<td>AR FORCE NOTIFICATION</td>
 									<td>MEMBER APPLICATION - PAYMENT RECEIVED</td>
 									<td>19 April 2018</td>
-									<td>
+									<td class="text-center text-nowrap">
 										<div class="checkbox">
 											<input id="check4" type="checkbox">
 											<label for="check4" class="d-flex">
 												<span><i class="mdi mdi-check"></i></span>
 											</label>
 										</div>
-									</td>
-									<td class="text-center">
-										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
+										<a href="#" class="control-buttons delete">
+											<i class="mdi mdi-delete"></i>
+										</a>
 									</td>
 								</tr>
 								</tbody>
 							</table>
 						</div>
 						<div class="text-center">
-							<a href="#" class="btn-repeat dark db-load-more">Load more</a>
+							<a href="#" class="btn-repeat dark db-load-more">Show more</a>
 						</div>
 					</div>
 					<div class="dashboard-row">
