--- a/dashboard-subscriptions.html
+++ b/dashboard-subscriptions.html
@@ -121,7 +121,7 @@
 					<div class="dashboard-header-right d-flex align-items-center">
 						<a href="#" class="user-info d-flex align-items-center">
 							<i class="mdi mdi-account-circle"></i>
-							<span>Hi, Bogdan</span>
+							<span>Hi Bogdan</span>
 						</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
@@ -152,8 +152,10 @@
 									</select>
 								</div>
 								<div class="col-lg-3">
-									<label for="lbl6">Coupon</label>
-									<input type="tel" id="lbl6">
+									<div class="profile-detail-input" style="margin-top: 28px;">
+										<input type="tel" id="lbl6">
+										<label for="lbl6">Coupon</label>
+									</div>
 								</div>
 								<div class="col-lg-3">
 									<label for="lbl7">Payment method</label>
@@ -193,7 +195,7 @@
 								</thead>
 								<tbody>
 								<tr>
-									<td class="font-weight-bold">Subscription Tp7H</td>
+									<td>Subscription Tp7H</td>
 									<td>ACTIVE</td>
 									<td>1 January 2019</td>
 									<td class="text-center text-nowrap">
@@ -202,7 +204,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td class="font-weight-bold">Subscription Tp7H</td>
+									<td>Subscription Tp7H</td>
 									<td>ACTIVE</td>
 									<td>1 January 2019</td>
 									<td class="text-center text-nowrap">
@@ -211,7 +213,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td class="font-weight-bold">Subscription Tp7H</td>
+									<td>Subscription Tp7H</td>
 									<td>ACTIVE</td>
 									<td>1 January 2019</td>
 									<td class="text-center text-nowrap">
