--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 						</div>
 					</div>
 					<div class="investment-board-row">
+						<svg class="circle-loader loading" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="10"></circle>
+						</svg>
+					</div>
+					<!--<div class="investment-board-row">
 						<div class="row">
 							<div class="col-md-8">
 								<div class="investment-board-left">
@@ -134,7 +139,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div>-->
 					<div class="button-wrap">
 						<a href="#" class="see-all-offers">See all current offers</a>
 					</div>
