--- a/dashboard-payments.html
+++ b/dashboard-payments.html
@@ -121,7 +121,7 @@
 					<div class="dashboard-header-right d-flex align-items-center">
 						<a href="#" class="user-info d-flex align-items-center">
 							<i class="mdi mdi-account-circle"></i>
-							<span>Hi, Bogdan</span>
+							<span>Hi Bogdan</span>
 						</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
@@ -149,12 +149,12 @@
 									<th>Term</th>
 									<th>Method</th>
 									<th>Amount</th>
-									<th>Pdf</th>
+									<th></th>
 								</tr>
 								</thead>
 								<tbody>
 								<tr>
-									<td class="font-weight-bold">Premium</td>
+									<td>Premium</td>
 									<td>May 7, 2018 00:00</td>
 									<td>12 Months</td>
 									<td>Bank Transfer</td>
