Dashboard change pass page fixed styles

--- a/dashboard-change-pass.html
+++ b/dashboard-change-pass.html
@@ -143,11 +143,13 @@
 						<form action="#">
 							<div class="row profile-details-row">
 								<div class="col-lg-3 col-md-6">
-									<label for="lbl1">Email</label>
-									<input type="email" id="lbl1">
+									<div class="profile-detail-input" style="margin-bottom: 15px;">
+										<input type="email" id="lbl1">
+										<label for="lbl1">Email</label>
+									</div>
 								</div>
 								<div class="col-lg-3 col-md-6">
-									<div class="button-wrapper">
+									<div class="button-wrapper" style="margin: 0;">
 										<button type="submit" class="progress-btn main-color-btn">
 											<span>continue</span>
 											<svg class="circle-loader" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
